--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,62 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    background-color: #101010;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-
-.Home{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.Home h2{
+* {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+     font-family: 'helvetica neue';
+ }
+ 
+ html,
+ body {
+     height: 100%;
+    width: 100%;
+    background-color: #010101;
     color: white;
-    padding: 20px;
-    font-size: 50px;
-}
-
-.Home button{
-    background-color: lightseagreen;
-    border: none;
-    border-radius: 5px;
-    padding: 20px 25px;
-    font-weight: 600;
-    font-size: 20px;
-}
+ }
+ 
+ .allProducts {
+     display: flex;
+     flex-wrap: wrap;
+     gap: 20px;
+     background-color: black;
+ }
+ 
+ .product {
+     text-align: center;
+     background-color: white;
+     display: block;
+     width: 300px;
+     padding: 20px;
+     text-decoration: none;
+     border-radius: 10px;
+ }
+ 
+ .product img {
+     height: 200px;
+ }
+ 
+ .product h2{
+     font-size: 20px;
+     margin-top: 20px;
+ }
+ .home{
+     position: absolute;
+     top: 50vh;
+     left: 50vw;
+     transform: translate(-50%,-50%);
+     text-align: center;
+ }
+ .home h1{
+     font-size:100px;
+     margin-bottom: 20px;
+     font-weight: 400;
+ }
+ .cta{
+     padding: 20px 45px;
+     background-color: lightseagreen;
+     color: white;
+     border: none;
+     cursor: pointer;
+     font-size: 24px;
+     border-radius: 10px;
+     font-weight: 600;
+ }
